# skorecard

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/: dependabot.yml
.github/workflows/: cronjob_unit_tests.yml  publish_docs.yml  publish_pypi.yml  unittests.yml  unittests_with_codecov.yml
api/bucketers/AgglomerativeClusteringBucketer/: index.html
api/bucketers/AsIsCategoricalBucketer/: index.html
api/bucketers/AsIsNumericalBucketer/: index.html
api/bucketers/DecisionTreeBucketer/: index.html
api/bucketers/EqualFrequencyBucketer/: index.html
api/bucketers/EqualWidthBucketer/: index.html
api/bucketers/OptimalBucketer/: index.html
api/bucketers/OrdinalCategoricalBucketer/: index.html
api/bucketers/UserInputBucketer/: index.html
api/datasets/load_uci_credit_card/: index.html
api/linear_model/LogisticRegression/: index.html
api/pipeline/BucketingProcess/: index.html
api/pipeline/KeepPandas/: index.html
api/pipeline/SkorecardPipeline/: index.html
api/pipeline/to_skorecard_pipeline/: index.html
api/preprocessing/ColumnSelector/: index.html
api/preprocessing/WoeEncoder/: index.html
api/reporting/iv/: index.html
api/reporting/psi/: index.html
api/rescale/rescale/: index.html
contributing/: index.html
discussion/benchmark_stats_feature/: index.html
discussion/benchmark_with_EBM/: index.html
discussion/benchmarks/: index.html
docs/: index.md
docs/api/apps/: BucketTweakerApp.md
docs/api/bucketers/: AgglomerativeClusteringBucketer.md  AsIsCategoricalBucketer.md  AsIsNumericalBucketer.md  DecisionTreeBucketer.md  EqualFrequencyBucketer.md  EqualWidthBucketer.md  OptimalBucketer.md  OrdinalCategoricalBucketer.md  UserInputBucketer.md
docs/api/datasets/: load_uci_credit_card.md
docs/api/linear_model/: LogisticRegression.md
docs/api/pipeline/: BucketingProcess.md  KeepPandas.md  SkorecardPipeline.md  to_skorecard_pipeline.md
docs/api/preprocessing/: ColumnSelector.md  WoeEncoder.md
docs/api/reporting/: iv.md  psi.md
docs/api/rescale/: rescale.md
docs/assets/stylesheets/: mknotebooks.css
docs/discussion/: benchmark_stats_feature.ipynb  benchmark_with_EBM.ipynb  benchmarks.ipynb  scorecard_concepts.md  terminology.md
docs/howto/: 1_bucketing.ipynb  2_feature_selection.ipynb  3_skorecard_model.ipynb  Optimizations.ipynb  create_bucketer_from_file.ipynb  howto-placeholder.md  intro.md  mix_with_other_packages.ipynb  psi_and_iv.ipynb  save_buckets_to_file.ipynb  using_manually_defined_buckets.ipynb
docs/includes/: abbreviations.md
docs/tutorials/: 1_bucketing.ipynb  2_feature_selection.ipynb  3_skorecard_model.ipynb  background.ipynb  buckets.yml  categoricals.ipynb  interactive_bucketing.ipynb  methods.ipynb  missing_values.ipynb  psi_and_iv.ipynb  reporting.ipynb  save_buckets_to_file.ipynb  specials.ipynb  the_basics.ipynb  using-bucketing-process.ipynb  using_bucketers.ipynb  using_manually_defined_buckets.ipynb
howto/Optimizations/: index.html
howto/mix_with_other_packages/: index.html
howto/psi_and_iv/: index.html
howto/save_buckets_to_file/: index.html
howto/using_manually_defined_buckets/: index.html
search/: search_index.json
skorecard/: __init__.py  bucket_mapping.py  datasets.py  features_bucket_mapping.py  skorecard.py
skorecard/apps/: __init__.py  app_callbacks.py  app_layout.py  app_utils.py  interactive_bucketing.py
skorecard/bucketers/: __init__.py  base_bucketer.py  bucketers.py
skorecard/linear_model/: __init__.py  linear_model.py
skorecard/metrics/: __init__.py  metrics.py
skorecard/pipeline/: __init__.py  bucketing_process.py  pipeline.py
skorecard/preprocessing/: _WoEEncoder.py  __init__.py  preprocessing.py
skorecard/reporting/: __init__.py  plotting.py  report.py
skorecard/rescale/: __init__.py  rescale.py
skorecard/utils/: __init__.py  arrayfuncs.py  dataframe.py  exceptions.py  validation.py
tests/: __init__.py  conftest.py  test_Skorecard_class.py  test_bucket_mapping.py  test_bucket_table_woe_values.py  test_bucketer_AgglomerativeClusteringBucketer.py  test_bucketer_AsIsCategoricalBucketer.py  test_bucketer_AsIsNumericalBucketer.py  test_bucketer_DecisionTreeBucketer.py  test_bucketer_OptimalBucketer.py  test_bucketer_OrdinalCategoricalBucketer.py  test_bucketer_UserInputBucketer.py  test_bucketer_WoEBucketer.py  test_bucketers.py  test_bucketing_process.py  test_column_selector.py  test_datasets.py  test_docstring.py  test_io.py  test_linear_model.py  test_manual_bucketer_app.py  test_metrics.py  test_pipelines.py  test_reports.py  test_rescale.py  test_sklearn_compat.py  test_specials_bucketers.py  test_suppressor_warning.py  test_usage_flows.py  test_utils.py
tutorials/1_bucketing/: index.html
tutorials/2_feature_selection/: index.html
tutorials/3_skorecard_model/: index.html
tutorials/categoricals/: index.html
tutorials/interactive_bucketing/: index.html
tutorials/methods/: index.html
tutorials/missing_values/: index.html
tutorials/reporting/: index.html
tutorials/specials/: index.html
tutorials/the_basics/: index.html
tutorials/using-bucketing-process/: index.html
